--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -34,7 +34,7 @@
 
                     <ul>
                         {{#highlights}}
-                            <li>{{{highlight}}} <a href="/highlights/{{id}}">Go to highlight</a></li>
+                            <li>{{{highlight}}} <a href="/highlights/{{id}}/details">Go to highlight</a></li>
                         {{/highlights}}
                     </ul>
 
