--- a/views/highlights/reusable/highlight-cards.mustache
+++ b/views/highlights/reusable/highlight-cards.mustache
@@ -5,7 +5,7 @@
                 <a role="button" href="#" data-id="{{id}}" class="badge badge-warning float-right btnHighlightVersions"
                    data-toggle="modal" data-target="#highlightVersionsModal"><span class="fe fe-activity fe-8"></span></a>
             {{/version_count}}
-            <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
+            <a role="button" href="/highlights/{{id}}/details" class="badge badge-primary float-right"><span
                     class="fe fe-edit fe-8"></span></a>
             <a role="button" class="badge float-right addToFavorite" data-id="{{id}}"><span
                     class="fe fe-heart fe-8"></span></a>
