--- a/views/highlights/reusable/search-results.mustache
+++ b/views/highlights/reusable/search-results.mustache
@@ -11,7 +11,7 @@
                        class="badge badge-warning float-right"><span
                             class="fe fe-activity fe-8"></span></a>
                 {{/version_count}}
-                <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
+                <a role="button" href="/highlights/{{id}}/details" class="badge badge-primary float-right"><span
                         class="fe fe-edit fe-8"></span></a>
                 <a role="button" class="badge float-right addToFavorite" data-id="{{id}}"><span
                         class="fe fe-heart fe-8"></span></a>
