--- a/views/home.mustache
+++ b/views/home.mustache
@@ -71,7 +71,7 @@
                         <h2>Random Highlight:</h2>
                         <div class="card highlightCard">
                             <div class="card-body">
-                                <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
+                                <a role="button" href="/highlights/{{id}}/details" class="badge badge-primary float-right"><span
                                         class="fe fe-edit fe-8"></span></a>
                                 <br>
                                 {{{highlight}}}
