--- a/views/books/paths.mustache
+++ b/views/books/paths.mustache
@@ -102,6 +102,7 @@
 {{> menu }}
 
 <script src="/js/apexcharts.min.js"></script>
+<script src="/js/charts/line.js"></script>
 <script>
     $(document).ready(function () {
 
