--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -67,6 +67,12 @@
                     <span id="myBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeChains}}">
+                <a href="/chains" class="nav-link">
+                    <i class="fe fe-command fe-16"></i>
+                    <span class="ml-3 item-text">Chains</span>
+                </a>
+            </li>
             <li class="nav-item dropdown {{activeLogs}}">
                 <a href="/logs" class="nav-link">
                     <i class="fe fe-align-justify fe-16"></i>
