Add blog path info

--- a/views/highlights/reusable/highlight-cards.mustache
+++ b/views/highlights/reusable/highlight-cards.mustache
@@ -1,6 +1,7 @@
 {{#highlights}}
     <div class="card highlightCard">
         <div class="card-body">
+
             {{#version_count}}
                 <a role="button" href="#" data-id="{{id}}" class="badge badge-warning float-right btnHighlightVersions"
                    data-toggle="modal" data-target="#highlightVersionsModal"><span
@@ -17,8 +18,13 @@
             <a role="button" class="badge float-right addToFavorite" data-id="{{id}}"><span
                     class="fe fe-heart fe-8"></span></a>
 
-            <br>
+            {{#blog_path}}
+                <br>
+                <strong># {{blog_path}}</strong>
+                <br>
+            {{/blog_path}}
 
+            <br>
             {{{highlight}}}
 
             <footer class="blockquote-footer">
