--- a/views/highlights/reusable/search-results.mustache
+++ b/views/highlights/reusable/search-results.mustache
@@ -6,8 +6,10 @@
         {{#highlights}}
         <div class="card highlightCard">
             <div class="card-body">
+
                 {{#version_count}}
-                    <a role="button" href="#" data-id="{{id}}" class="badge badge-warning float-right btnHighlightVersions"
+                    <a role="button" href="#" data-id="{{id}}"
+                       class="badge badge-warning float-right btnHighlightVersions"
                        data-toggle="modal" data-target="#highlightVersionsModal"><span
                             class="fe fe-activity fe-8"></span></a>
                 {{/version_count}}
@@ -21,6 +23,13 @@
                         class="fe fe-edit fe-8"></span></a>
                 <a role="button" class="badge float-right addToFavorite" data-id="{{id}}"><span
                         class="fe fe-heart fe-8"></span></a>
+
+                {{#blog_path}}
+                    <br>
+                    <strong>{{blog_path}}</strong>
+                    <br>
+                {{/blog_path}}
+
                 <br>
                 {{{highlight}}}
 
