Fix search param value

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -26,7 +26,7 @@
 
         <input id="searchHighlights" class="nav form-control bg-transparent border-0 pl-4 text-muted" type="search"
                placeholder="Search Highlights" aria-label="Search"
-               {{#searchParam}}value="{{searchParam}}"{{/searchParam}}>
+               {{#searchParam}}value="{{{searchParam}}}"{{/searchParam}}>
 
     </nav>
     <main role="main" class="main-content">
