Fix date format error

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -97,7 +97,7 @@
             singleDatePicker: true,
             timePicker: false,
             showDropdowns: true,
-            locale: {format: 'DD/MM/YYYY'}
+            locale: {format: 'DD-MM-YYYY'}
         });
 
         $("#btnAddNewDateTracking").on('click', function (e) {
