Fix insertTexts content for image

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -200,7 +200,7 @@
         var simplemde = new SimpleMDE({
             element: $("#highlight")[0],
             toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
-            insertTexts: {"image": ["[", "](/img/)"]},
+            insertTexts: {"image": ["![", "](/img/)"]},
             autofocus: true
         });
 
