--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -56,7 +56,7 @@
         var simplemde = new SimpleMDE({
             element: $("#highlight")[0],
             toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
-            insertTexts: {"image": ["[", "](/img/)"]},
+            insertTexts: {"image": ["![", "](/img/)"]},
         });
 
         inlineAttachment.editors.codemirror4.attach(simplemde.codemirror, {
