--- a/views/books/highlights.mustache
+++ b/views/books/highlights.mustache
@@ -66,7 +66,7 @@
         var simplemde = new SimpleMDE({
             element: $("#highlight")[0],
             toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
-            insertTexts: {"image": ["[", "](/img/)"]},
+            insertTexts: {"image": ["![", "](/img/)"]},
         });
 
         $('#highlight').show();
